--- a/SpringServer/build.gradle
+++ b/SpringServer/build.gradle
@@ -20,7 +20,7 @@ dependencies {
 	runtimeOnly 'org.postgresql:postgresql'
 	// вот это надо закомментить (чтобы не было защиты)
 	implementation 'org.springframework.boot:spring-boot-starter-security'
-
+	implementation group: 'org.mapstruct', name: 'mapstruct', version: '1.5.5.Final'
 
 	// https://mvnrepository.com/artifact/mysql/mysql-connector-java
 	//implementation group: 'mysql', name: 'mysql-connector-java', version: '8.0.28'
