--- a/SpringServer/build.gradle
+++ b/SpringServer/build.gradle
@@ -23,6 +23,7 @@ dependencies {
 	annotationProcessor "org.mapstruct:mapstruct-processor:1.5.5.Final"
 	implementation 'org.springframework.boot:spring-boot-starter-validation'
 	implementation 'org.liquibase:liquibase-core'
+	implementation 'com.maxmind.geoip2:geoip2:4.2.0'
 }
 
 tasks.named('test') {
