--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -6,6 +6,7 @@
     <uses-permission android:name="android.permission.INTERNET" />
 
     <application
+        android:name=".MyApplication"
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
@@ -17,6 +18,21 @@
             android:name=".login_activity.LoginActivity"
             android:exported="true"
             android:label="@string/title_activity_login">
+        </activity>
+        <activity
+            android:name=".main_menu_activity.MainMenuActivity"
+            android:exported="true"
+            android:label="Main Menu">
+        </activity>
+        <activity
+            android:name=".order_page_activity.OrderPageActivity"
+            android:exported="true"
+            android:label="Order Page">
+        </activity>
+        <activity
+            android:name=".greeting_screen.FirstActivity"
+            android:exported="true"
+            android:label="Greeting Screen">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
                 <category android:name="android.intent.category.LAUNCHER" />
@@ -25,7 +41,21 @@
         <activity
             android:name=".employee_list_activity.EmployeeListActivity"
             android:exported="true"
-            android:label="Employee list">
+            android:label="Employee List">
+        </activity>
+        <activity
+            android:name=".pets_page_activity.PetsPageActivity"
+            android:exported="true"
+            android:label="Pet List">
+            <meta-data
+                android:name="android.support.PARENT_ACTIVITY"
+                android:value=".pets_page_activity.PetsPageActivity"/>
+        </activity>
+        <activity
+            android:name=".pets_page_activity.AddPetActivity"
+            android:exported="true"
+            android:label="Add Pet Form"
+            android:parentActivityName=".pets_page_activity.PetsPageActivity">
         </activity>
     </application>
 
